Fix notifications z-index

--- a/src/app/shared/components/notifications/notifications.scss
+++ b/src/app/shared/components/notifications/notifications.scss
@@ -4,7 +4,7 @@
     position: fixed;
     top: 0;
     right: 0;
-    z-index: 11;
+    z-index: $notifications-z-index;
     box-shadow: 2px 0 6px rgba(#000, .3);
 }
 
