--- a/src/app/shared/styles/config.scss
+++ b/src/app/shared/styles/config.scss
@@ -59,6 +59,7 @@ $basePageWidth: 1024px;
 $nav-z-index: 11;
 $top-bar-z-index: 9;
 $sliding-panel-z-index: 20;
+$notifications-z-index: 21;
 
 $argo-icon-fonts-root: 'assets/fonts/';
 $fa-font-path: 'assets/fonts';
